# ast_roller

./: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
src/ast_roller/: __main__.py  config.py  evaluators.py  grammar.py  main.py  results.py
src/tests/evaluators/: evaluators_test_cases.py  test_evaluators.py
src/tests/grammar/: grammar_test_cases.py  test_grammar.py
src/tests/logging/: logging_test_cases.py  test_logging.py
src/tests/results/: results_test_cases.py  test_results.py
src/tests/results/snapshots/test_results/test_arithmetic_operations_outputs/0_-_10/: output.txt
src/tests/results/snapshots/test_results/test_arithmetic_operations_outputs/20__5/: output.txt
src/tests/results/snapshots/test_results/test_arithmetic_operations_outputs/29/: output.txt
src/tests/results/snapshots/test_results/test_arithmetic_operations_outputs/3__4/: output.txt
src/tests/results/snapshots/test_results/test_arithmetic_operations_outputs/42/: output.txt
src/tests/results/snapshots/test_results/test_basic_dice_outputs/10d10_dh2_kl2/: output.txt
src/tests/results/snapshots/test_results/test_basic_dice_outputs/2d20_kh1/: output.txt
src/tests/results/snapshots/test_results/test_basic_dice_outputs/3d6/: output.txt
src/tests/results/snapshots/test_results/test_basic_dice_outputs/4d6_dl1/: output.txt
src/tests/results/snapshots/test_results/test_basic_dice_outputs/4dF/: output.txt
src/tests/results/snapshots/test_results/test_basic_dice_outputs/d20/: output.txt
(+8 files in other folders)
