[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ast_roller"
version = "0.0.1"
authors = [
  { name="James Conklin", email="jamesdylanconklin@gmail.com" },
]
description = "Expressive AST-based dice roller"

readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.scripts]
ast_roller = "ast_roller.main:main"

[project.urls]
Homepage = "https://github.com/jamesdylanconklin/ast-roller"
Issues = "https://github.com/jamesdylanconklin/ast-roller/issues"

[project.dependencies]
dependencies = [
    "lark>=1.1.9"
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==7.0.0",
    "pytest-snapshot==0.9.0",
    "ruff==0.9.10",
    "pre-commit==4.1.0",
    "setuptools>=65.0.0,<70.0.0",
]